--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,9 @@
 build: false
 
+before_test:
+  - ps: Write-Host -Object "Install Pester" -ForegroundColor DarkGreen
+  - ps: Install-Module -Name Pester -Repository PSGallery -Force | Out-Null
+
 test_script:
   - ps: $res = Invoke-Pester -Path ".\Tests" -OutputFormat NUnitXml -OutputFile TestsResults.xml -PassThru
   - ps: (New-Object 'System.Net.WebClient').UploadFile("https://ci.appveyor.com/api/testresults/nunit/$($env:APPVEYOR_JOB_ID)", (Resolve-Path .\TestsResults.xml))
