--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,13 +8,10 @@ cache:
   - C:\Program Files\WindowsPowerShell\Modules\PSFramework -> appveyor.yml
   - C:\Program Files\WindowsPowerShell\Modules\dbatools -> appveyor.yml
 
-before_test:
-  - ps: .\appveyor.setup.ps1
-
 test_script:
 # Test with native PS version
   - ps: . .\Tests\appveyor.pester.ps1
 # Test with PS version 3
-  - ps: powershell.exe -version 3.0 -executionpolicy bypass -noprofile -file .\Tests\appveyor.pester.ps1
+  - ps: powershell.exe -executionpolicy bypass -noprofile -file .\Tests\appveyor.pester.ps1
 # Finalize pass - collect and upload results
   - ps: . .\Tests\appveyor.pester.ps1 -Finalize
