--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,14 @@ build: false
 
 version: 0.1.{build}
 
+configuration:
+  - Debug
+
+environment:
+  matrix:
+    -APPVEYOR_BUILD_WORKER_IMGE: Visual Studio 2015
+    APPVEYOR_SAVE_CACHE_ON_ERROR: true
+
 cache:
   - C:\Program Files\WindowsPowerShell\Modules\PSScriptAnalyzer -> appveyor.yml
   - C:\Program Files\WindowsPowerShell\Modules\Pester -> appveyor.yml
