--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,8 +7,8 @@ configuration:
 
 environment:
   matrix:
-    -APPVEYOR_BUILD_WORKER_IMGE: Visual Studio 2015
-    APPVEYOR_SAVE_CACHE_ON_ERROR: true
+    - APPVEYOR_BUILD_WORKER_IMGE: Visual Studio 2015
+    - APPVEYOR_SAVE_CACHE_ON_ERROR: true
 
 cache:
   - C:\Program Files\WindowsPowerShell\Modules\PSScriptAnalyzer -> appveyor.yml
