--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,13 @@ environment:
   matrix:
     - APPVEYOR_BUILD_WORKER_IMGE: Visual Studio 2015
       APPVEYOR_SAVE_CACHE_ON_ERROR: true
+      APPVEYOR_RDP_PASSWORD: Pa55w0rd!
+
+init:
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+
+on_finish:
+  - ps: $blockRdp = $true; iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
 
 cache:
   - C:\Program Files\WindowsPowerShell\Modules\PSScriptAnalyzer -> appveyor.yml
