--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,126 +1,134 @@
-// Available variables which can be used inside of strings.
-// ${workspaceRoot}: the root folder of the team
-// ${file}: the current opened file
-// ${relativeFile}: the current opened file relative to workspaceRoot
-// ${fileBasename}: the current opened file's basename
-// ${fileDirname}: the current opened file's dirname
-// ${fileExtname}: the current opened file's extension
-// ${cwd}: the current working directory of the spawned process
+// A task runner that invokes Pester to run all Pester tests under the
+// current workspace folder.
+// NOTE: This Test task runner requires an updated version of Pester (>=4.0.3)
+// in order for the problemMatcher to find failed test information (message, line, file).
+// If you don't have that version, you can update Pester from the PowerShell Gallery
+// with this command:
+//
+// PS C:\> Update-Module Pester
+//
+// If that gives an error like:
+// "Module 'Pester' was not installed by using Install-Module, so it cannot be updated."
+// then execute:
+//
+// PS C:\> Install-Module Pester -Scope CurrentUser -Force
+//
+// NOTE: The Clean, Build and Publish tasks require PSake. PSake can be installed
+// from the PowerShell Gallery with this command:
+//
+// PS C:\> Install-Module PSake -Scope CurrentUser -Force
+//
+// Available variables which can be used inside of strings:
+// ${workspaceFolder} the path of the workspace folder that contains the tasks.json file
+// ${workspaceFolderBasename} the name of the workspace folder that contains the tasks.json file without any slashes (/)
+// ${file} the current opened file
+// ${relativeFile} the current opened file relative to the workspace folder containing the file
+// ${fileBasename} the current opened file's basename
+// ${fileBasenameNoExtension} the current opened file's basename without the extension
+// ${fileDirname} the current opened file's dirname
+// ${fileExtname} the current opened file's extension
+// ${cwd} the task runner's current working directory on startup
+// ${lineNumber} the current selected line number in the active file
 {
-    // See https://go.microsoft.com/fwlink/?LinkId=733558
-    // for the documentation about the tasks.json format
-    "version": "0.1.0",
-    "runner": "terminal",
-    // Start PowerShell
+    "version": "2.0.0",
     "windows": {
-    //  "command": "C:\\WINDOWS\\Sysnative\\WindowsPowerShell\\v1.0\\powershell.exe"
-    "command": "powershell.exe"
+        "options": {
+            "shell": {
+                "executable": "C:\\Windows\\System32\\WindowsPowerShell\\v1.0\\powershell.exe",
+                "args": [
+                    "-NoProfile",
+                    "-ExecutionPolicy",
+                    "Bypass",
+                    "-Command"
+                ]
+            }
+        }
     },
-//  "linux": {
-//      "command": "/usr/bin/powershell"
-//  },
-//  "osx": {
-//      "command": "/usr/local/bin/powershell"
-//  },
-    // The command is a shell script
-    "isShellCommand": true,
-    // Show the output window always
-    "showOutput": "always",
-    "args": [
-        "-NoProfile",
-        "-ExecutionPolicy",
-        "Bypass"
-    ],
-    // Associate with test task runner
+    "linux": {
+        "options": {
+            "shell": {
+                "executable": "/usr/bin/pwsh",
+                "args": [
+                    "-NoProfile",
+                    "-Command"
+                ]
+            }
+        }
+    },
+    "osx": {
+        "options": {
+            "shell": {
+                "executable": "/usr/local/bin/pwsh",
+                "args": [
+                    "-NoProfile",
+                    "-Command"
+                ]
+            }
+        }
+    },
     "tasks": [
         {
-            "taskName": "Run.AllTest",
-            "suppressTaskName": true,
-            "isTestCommand": false,
-            "showOutput": "always",
-            "args": [
-                "Invoke-Pester -PesterOption @{IncludeVSCodeMarker=$true};",
-                "Invoke-Command { Write-Host 'Completed Test task in task runner.' }"
-            ],
+            "label": "Clean",
+            "type": "shell",
+            "command": "Invoke-PSake build.ps1 -taskList Clean"
+        },
+        {
+            "label": "Build",
+            "type": "shell",
+            "command": "Invoke-PSake build.ps1 -taskList Build",
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            }
+        },
+        {
+            "label": "Test All",
+            "type": "shell",
+            "command": "Invoke-Pester -PesterOption @{IncludeVSCodeMarker=$true}",
+            "group": {
+                "kind": "test",
+                "isDefault": true
+            },
             "problemMatcher": [
-                {
-                    "owner": "powershell",
-                    "fileLocation": [
-                        "absolute"
-                    ],
-                    "severity": "error",
-                    "pattern": [
-                        {
-                            "regexp": "^\\s*(\\[-\\]\\s*.*?)(\\d+)ms\\s*$",
-                            "message": 1
-                        },
-                        {
-                            "regexp": "^\\s+at\\s+[^,]+,\\s*(.*?):\\s+line\\s+(\\d+)$",
-                            "file": 1,
-                            "line": 2
-                        }
-                    ]
-                }
+                "$pester"
             ]
         },
         {
-            "taskName": "Run.IntegrationTests",
-            "suppressTaskName": true,
-            "isTestCommand": false,
-            "showOutput": "always",
-            "args": [
-                "Invoke-Pester -PesterOption @{IncludeVSCodeMarker=$true} -Tag 'Integrationtests';",
-                "Invoke-Command { Write-Host 'Completed Test task in task runner.' }"
-            ],
+            "label": "Test Current",
+            "type": "shell",
+            "command": "Invoke-Pester -PesterOption @{IncludeVSCodeMarker=$true} -Script '${workspaceRoot}\\Tests\\${fileBasenameNoExtension}.Tests.ps1'",
+            "group": {
+                "kind": "test",
+                "isDefault": true
+            },
             "problemMatcher": [
-                {
-                    "owner": "powershell",
-                    "fileLocation": [
-                        "absolute"
-                    ],
-                    "severity": "error",
-                    "pattern": [
-                        {
-                            "regexp": "^\\s*(\\[-\\]\\s*.*?)(\\d+)ms\\s*$",
-                            "message": 1
-                        },
-                        {
-                            "regexp": "^\\s+at\\s+[^,]+,\\s*(.*?):\\s+line\\s+(\\d+)$",
-                            "file": 1,
-                            "line": 2
-                        }
-                    ]
-                }
+                    {
+                        "owner": "powershell",
+                        "fileLocation": [
+                            "absolute"
+                        ],
+                        "severity": "error",
+                        "pattern": [
+                            {
+                                "regexp": "^\\s*(?:\\[-\\]\\s)(\\s*.*?)(?:\\s\\d*\\.?\\d*s|\\s\\d*\\.?\\d*ms)\\s*$",
+                                "message": 1
+                            },
+                            {
+                                "regexp": "^\\s+at\\s+[^,]+,\\s*(.*?):\\s+line\\s+(\\d+)$",
+                                "file": 1,
+                                "line": 2
+                            }
+                        ]
+                    }
             ]
         },
         {
-            "taskName": "Run.CurrentFile",
-            "suppressTaskName": true,
-            "isTestCommand": true,
-            "showOutput": "always",
-            "args": [
-                "Invoke-Pester -PesterOption @{IncludeVSCodeMarker=$true} -Script '${workspaceRoot}/Tests/${fileBasenameNoExtension}.Tests.ps1';"
-            ],
-            "problemMatcher": [
-                {
-                    "owner": "powershell",
-                    "fileLocation": [
-                        "absolute"
-                    ],
-                    "severity": "error",
-                    "pattern": [
-                        {
-                            "regexp": "^\\s*(\\[-\\]\\s*.*?)(\\d+)ms\\s*$",
-                            "message": 1
-                        },
-                        {
-                            "regexp": "^\\s+at\\s+[^,]+,\\s*(.*?):\\s+line\\s+(\\d+)$",
-                            "file": 1,
-                            "line": 2
-                        }
-                    ]
-                }
-            ]
+            "label": "Publish",
+            "type": "shell",
+            "command": "Invoke-PSake build.ps1 -taskList Publish"
         }
     ]
 }
+
+
+//            "command": "$ProgressPreference = 'SilentlyContinue'; Invoke-Pester -PesterOption @{IncludeVSCodeMarker=$true} -Script '${workspaceRoot}/Tests/${fileBasenameNoExtension}.Tests.ps1';",
