--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,8 +25,6 @@ cache:
 
 test_script:
 # Test with native PS version
-  - ps: .\Tests\appveyor.pester.ps1
-# This works...
-#  - ps: powershell.exe -executionpolicy bypass -noprofile -file .\Tests\appveyor.pester.ps1
+  - ps: .\Tests\appveyor.pester.ps1 -CodeCoverage
 # Finalize pass - collect and upload results
   - ps: . .\Tests\appveyor.pester.ps1 -Finalize
